Fixed project backgrounds looking off on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -445,10 +445,6 @@ html {
                         position: absolute;
                         object-fit: cover;
                         width: 125%;
-                        @media (max-width: 800px) {
-                            height: 125%;
-                            width: initial;
-                        }
                     }
                 }
             }
